2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘lockhead’, ‘unlockcaller’ from global state of rcs(1).

	* rcs.c (struct admin_closure):
	Add members ‘lockhead’, ‘unlockcaller’.
	(lockhead, unlockcaller): Delete vars.
	(dolocks): Use ‘dc->unlockcaller’, ‘dc->lockhead’.
	(main): Use ‘dc.lockhead’, ‘dc.unlockcaller’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘suppress_mail’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add member ‘suppress_mail’.
	(suppress_mail): Delete var.
	(sendmail): Take 3rd arg ‘suppress_mail’.
	(breaklock): Take 2nd arg ‘suppress_mail’; update call to ‘sendmail’.
	(setlock, dolocks): Update calls to ‘breaklock’.
	(main): Use ‘dc.suppress_mail’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove outdate vars from global state of rcs(1).

	U (X...) ≡ "Take arg ‘dc’; use ‘dc->X’, ...";
	U (*) ≡ U (cuthead, cuttail, delstrt).
	* rcs.c (struct admin_closure):
	Add members ‘cuthead’, ‘cuttail’, ‘delstrt’.
	(cuthead, cuttail, delstrt): Delete vars.
	(scanlogtext): U (cuttail).
	(searchcutpt): U (cuthead).
	(removerevs): U (*); update call to ‘searchcutpt’.
	(buildeltatext): U (cuttail, cuthead); update call to ‘scanlogtext’.
	(buildtree): U (*).
	(main): Use ‘dc.cuthead’, ‘dc.cuttail’; update calls to
	‘removerevs’, ‘buildtree’, ‘buildeltatext’, ‘scanlogtext’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘messagelst’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add members ‘logs’, ‘tp_log’.
	(messagelst): Delete var.
	(getmessage): Take ‘dc’, not ‘tp’; use ‘dc->tp_log’.
	(domessages): Use ‘dc->logs’.
	(main): Delete auto var ‘tp_log’;
	update call to ‘getmessage’; use ‘dc.logs’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘assoclst’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add members ‘assocs’, ‘tp_assoc’.
	(assoclst): Delete var.
	(getassoclst): Take ‘dc’, not ‘tp’; use ‘dc->tp_assoc’.